--- a/src/main/resources/styles/Styles.css
+++ b/src/main/resources/styles/Styles.css
@@ -11,23 +11,23 @@
 }
 
 .tab-pane *.tab-header-background {
-    -fx-background-color: lightblue;
+    /*-fx-background-color: lightblue;*/
 }
 
 .scroll-pane {
-   -fx-background-color: transparent;
+   /*-fx-background-color: transparent;*/
    -fx-padding: 5px;
 }
 
 .scroll-pane > .viewport {
-   -fx-background-color: transparent;
+   /*-fx-background-color: transparent;*/
 }
 
 .split-pane {
-   -fx-background-color: transparent;
+   /*-fx-background-color: transparent;*/
 }
 
 .tab-pane {
-    -fx-border-color: black;
-    -fx-border-width: 1px;
+    /*-fx-border-color: black;*/
+    /*-fx-border-width: 1px;*/
 }
